--- a/primeiro-projeto/src/app/cursos/cursos.component.html
+++ b/primeiro-projeto/src/app/cursos/cursos.component.html
@@ -1,3 +1,11 @@
-este é o componente cursos
+<p>
+    Lista de cursos do portal {{nomePortal}}
+</p>
 
 <app-curso-detalhe></app-curso-detalhe>
+
+<ul>
+    <li *ngFor="let curso of cursos">
+        {{curso}}
+    </li>
+</ul>
