eventos e classes CSS (review)

--- a/data-binding/src/app/data-binding/data-binding.component.html
+++ b/data-binding/src/app/data-binding/data-binding.component.html
@@ -1,6 +1,6 @@
-<section class="property-binding">
+ <section class="property-binding">
 
-    <h3>Class e Style Binding</h3>
+<!--    <h3>Class e Style Binding</h3>
 
     <div>
         Selecione uma classe
@@ -29,7 +29,7 @@
             Erro
         </div>
 
-        <!-- Este embaixo e o style binding -->
+         Este embaixo e o style binding 
         <div class="alert alert-danger" role="alert"
             [style.display]="classe.value == 'alert-danger' ? 'block': 'none'">
             Este texto só aparece em caso da classe erro (danger) estar selecionada
@@ -39,6 +39,41 @@
             Texto colorido conforme valor do combobox
         </div>
 
-    </div>
+    </div>-->
+
+    <article>
+        <h3>Event binding</h3>
+        <div>
+            <button 
+                (click)="botaoClicado()"
+                class="btn btn-primary">
+                Me clique
+            </button>
+            
+            <br><br>
+
+            <!-- outra forma : (blur)="salvarValor($event.target.value)" -->
+            <input type="text" 
+                (keyup)="onKeyUp($event)"
+                (keyup.enter)="salvarValor(campoInput.value)"
+                (blur)="salvarValor(campoInput.value)"
+                #campoInput
+            />
+
+            <p>Valor Atual: {{valorAtual}} </p>
+            <p>Valor Salvo: {{valorSalvo}} </p>
+
+            <br>
+            <span
+                (mouseover)="onMouseOverOut()"    
+                (mouseout)="onMouseOverOut()"    
+                [class.highlight]="isMouseOver"    
+            
+            >
+                Passe o mouse sobre mim
+            </span>
+
+        </div>
+    </article>
 
 </section>
