--- a/data-binding/src/app/data-binding/data-binding.component.html
+++ b/data-binding/src/app/data-binding/data-binding.component.html
@@ -1,79 +1,1 @@
- <section class="property-binding">
-
-<!--    <h3>Class e Style Binding</h3>
-
-    <div>
-        Selecione uma classe
-        <select #classe (change)="0">
-            <option value="alert-success">Sucesso</option>
-            <option value="alert-info">Info</option>
-            <option value="alert-warning">Alerta</option>
-            <option value="alert-danger">Erro</option>
-        </select>
-        <br><br>
-
-        <div class="alert" role="alert"
-            [class.alert-success]="classe.value == 'alert-success'">
-            Sucesso
-        </div>
-        <div class="alert" role="alert"
-            [class.alert-info]="classe.value == 'alert-info'">
-            Info
-        </div>
-        <div class="alert" role="alert"
-            [class.alert-warning]="classe.value == 'alert-warning'">
-            Alerta
-        </div>
-        <div class="alert" role="alert"
-            [class.alert-danger]="classe.value == 'alert-danger'">
-            Erro
-        </div>
-
-         Este embaixo e o style binding 
-        <div class="alert alert-danger" role="alert"
-            [style.display]="classe.value == 'alert-danger' ? 'block': 'none'">
-            Este texto só aparece em caso da classe erro (danger) estar selecionada
-        </div>
-
-        <div class="alert {{ classe.value }}" role="alert">
-            Texto colorido conforme valor do combobox
-        </div>
-
-    </div>-->
-
-    <article>
-        <h3>Event binding</h3>
-        <div>
-            <button 
-                (click)="botaoClicado()"
-                class="btn btn-primary">
-                Me clique
-            </button>
-            
-            <br><br>
-
-            <!-- outra forma : (blur)="salvarValor($event.target.value)" -->
-            <input type="text" 
-                (keyup)="onKeyUp($event)"
-                (keyup.enter)="salvarValor(campoInput.value)"
-                (blur)="salvarValor(campoInput.value)"
-                #campoInput
-            />
-
-            <p>Valor Atual: {{valorAtual}} </p>
-            <p>Valor Salvo: {{valorSalvo}} </p>
-
-            <br>
-            <span
-                (mouseover)="onMouseOverOut()"    
-                (mouseout)="onMouseOverOut()"    
-                [class.highlight]="isMouseOver"    
-            
-            >
-                Passe o mouse sobre mim
-            </span>
-
-        </div>
-    </article>
-
-</section>
+<app-meuform></app-meuform>
