--- a/data-binding/src/app/data-binding/data-binding.component.html
+++ b/data-binding/src/app/data-binding/data-binding.component.html
@@ -3,5 +3,11 @@
         <h3>Input/Output Properties</h3>
 
         <app-curso [nome]="nomeDoCurso" ></app-curso>
+
+        <contador [valor]="valorInicial"
+            (mudouValor)="onMudouValor($event)"
+        
+        ></contador>
+
     </article>
 </section>
