--- a/diretivas/src/app/app.component.html
+++ b/diretivas/src/app/app.component.html
@@ -1,1 +1,10 @@
-<app-operador-elvis></app-operador-elvis>
+<!-- <app-exemplo-ng-content>
+    Conteúdo passado para o componente
+    <app-operador-elvis></app-operador-elvis>
+</app-exemplo-ng-content> -->
+
+<app-exemplo-ng-content>
+    <div class="titulo">Titulo do painel</div>
+    <div class="corpo">Corpo do painel</div>
+    <div class="corpo">Corpo do painel</div>
+</app-exemplo-ng-content>
