--- a/diretivas/src/app/app.component.html
+++ b/diretivas/src/app/app.component.html
@@ -3,8 +3,10 @@
     <app-operador-elvis></app-operador-elvis>
 </app-exemplo-ng-content> -->
 
-<app-exemplo-ng-content>
+<!-- <app-exemplo-ng-content>
     <div class="titulo">Titulo do painel</div>
     <div class="corpo">Corpo do painel</div>
     <div class="corpo">Corpo do painel</div>
-</app-exemplo-ng-content>
+</app-exemplo-ng-content> -->
+
+<app-diretivas-customizadas></app-diretivas-customizadas>
