--- a/diretivas/src/app/diretivas-customizadas/diretivas-customizadas.component.html
+++ b/diretivas/src/app/diretivas-customizadas/diretivas-customizadas.component.html
@@ -4,3 +4,8 @@
 
 <button fundoAmarelo>Botao com fundo amarelo</button>
 <!-- deixou de ser quando coloquei a tag antes do nome no selector do ts deste component -->
+<br><br>
+
+<p highlightMouse>
+    Texto com highlight quando passo o mouse
+</p>
