--- a/diretivas/src/app/diretivas-customizadas/diretivas-customizadas.component.html
+++ b/diretivas/src/app/diretivas-customizadas/diretivas-customizadas.component.html
@@ -1,15 +1,24 @@
-<p fundoAmarelo> 
-    Texto com fundo amarelo
-</p>
+<h5>Diretiva Estruturada customizada - ngElse</h5>
 
-<button fundoAmarelo>Botao com fundo amarelo</button>
-<!-- deixou de ser quando coloquei a tag antes do nome no selector do ts deste component -->
-<br><br>
+<div *ngIf="mostrarCursos">
+    Lista de cursos aqui
+</div>
+<div *ngElse="mostrarCursos">
+    Não existem cursos para serem listados
+</div>
 
-<p highlightMouse>
-    Texto com highlight quando passo o mouse
-</p>
+<br>
 
-<p [highlight]="'red'" [defaultColor]="'grey'">
-    Texto com highlight com cores customizadas
-</p>
+<button (click)="onMostrarCursos()">
+    Mostrar ou esconder cursos
+</button>
+
+<br>
+
+<ng-template [ngElse]="mostrarCursos">
+    <div>
+        Não existem cursos para serem listados
+    </div>
+</ng-template>
+
+<!-- o curso aborda a tag template porém ela foi mudada a partir do 5 para ng-template -->
