--- a/pipes/src/app/exemplos-pipes/exemplos-pipes.component.html
+++ b/pipes/src/app/exemplos-pipes/exemplos-pipes.component.html
@@ -1,6 +1,6 @@
 <h5>Exemplos de Pipes</h5>
 
-<p>Titulo: {{livro.titulo | uppercase | lowercase }} </p>
+<p>Titulo: {{livro.titulo | uppercase | lowercase | camelCase }} </p>
 <p>rating: {{livro.rating | number:'1.1-1' }} </p>
 <p>numeroPaginas: {{livro.numeroPaginas}} </p>
 <p>preco: {{livro.preco | currency:'BRL' }} </p>
