--- a/pipes/src/app/exemplos-pipes/exemplos-pipes.component.html
+++ b/pipes/src/app/exemplos-pipes/exemplos-pipes.component.html
@@ -17,9 +17,26 @@
 <!-- Esse adicionar curso nao funciona quando esta filtrado, tendo que apgar o filtro e depois fazer o filtro
 Isso se deve pq ele e um pipe puro, pois nao leva em conta as mudanças feitas no componente -->
 
+<h5>Pipe Puro</h5>
 
 <ul>
     <li *ngFor="let liv of livros | filtroArray:filtro">
+        {{liv}}
+    </li>
+</ul>
+
+<h5>Pipe Impuro</h5>
+
+<ul>
+    <li *ngFor="let liv of livros | filtroArray:filtro">
+        {{liv}}
+    </li>
+</ul>
+
+<h5>Maneira correta de usar filtros nos projetos</h5>
+
+<ul>
+    <li *ngFor="let liv of obterCursos()">
         {{liv}}
     </li>
 </ul>
