--- a/pipes/src/app/exemplos-pipes/exemplos-pipes.component.html
+++ b/pipes/src/app/exemplos-pipes/exemplos-pipes.component.html
@@ -40,3 +40,8 @@ Isso se deve pq ele e um pipe puro, pois nao leva em conta as mudanças feitas n
         {{liv}}
     </li>
 </ul>
+
+<p> {{valorAsync | async}} </p>
+<!-- O pipe async aqui é utilizado porque sem ele minha promessa apareceria como object promise -->
+
+<p> {{valorAsync2 | async}} </p>
