--- a/aula-rotas/src/app/app.component.html
+++ b/aula-rotas/src/app/app.component.html
@@ -1,19 +1,22 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a [routerLink]="['/home']" routerLinkActive="router-link-active"  class="navbar-brand" href="#">Rotas Ng2</a>
+    <a [routerLink]="['/home']" routerLinkActive="active"  class="navbar-brand">Rotas Ng2</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a [routerLink]="['/login']" routerLinkActive="router-link-active"  class="nav-link" href="#">Login </a>
+        <li class="nav-item">
+          <a [routerLink]="['/login']" routerLinkActive="active" class="nav-link">Login </a>
         </li>
         <li class="nav-item">
-          <a [routerLink]="['/cursos']" routerLinkActive="router-link-active"  class="nav-link" href="#">Cursos</a>
+          <a [routerLink]="['/cursos']" [queryParams]="{pagina:1}" routerLinkActive="active" class="nav-link">Cursos</a>
+        </li>        <li class="nav-item">
+          <a [routerLink]="['curso',idCurso.value]" routerLinkActive="active" class="nav-link">Curso com id</a>
         </li>
       </ul>
     </div>
   </nav>
   <div class="container">
+      <p>Entre com id do curso</p> <input #idCurso>
       <router-outlet></router-outlet>
   </div>
