--- a/aula-rotas/src/app/cursos/cursos.component.html
+++ b/aula-rotas/src/app/cursos/cursos.component.html
@@ -1,1 +1,12 @@
-<p>cursos works!</p>
+<p>Lista de Cursos:</p>
+<p>pagina: {{pagina}}</p>
+
+<div class="list-group">
+    <a class="list-group-item"
+        *ngFor="let curso of cursos"
+        [routerLink]="['/curso',curso.id]" 
+    >{{curso.nome}}
+    </a>
+</div>
+
+<button (click)="proximaPagina()">Proxima Pagina</button>
