--- a/aula-rotas/src/app/app.component.html
+++ b/aula-rotas/src/app/app.component.html
@@ -10,8 +10,12 @@
         </li>
         <li class="nav-item">
           <a [routerLink]="['/cursos']" [queryParams]="{pagina:1}" routerLinkActive="active" class="nav-link">Cursos</a>
-        </li>        <li class="nav-item">
+        </li>
+        <li class="nav-item">
           <a [routerLink]="['curso',idCurso.value]" routerLinkActive="active" class="nav-link">Curso com id</a>
+        </li>
+        <li class="nav-item">
+          <a [routerLink]="['/alunos']"  routerLinkActive="active" class="nav-link">Alunos</a>
         </li>
       </ul>
     </div>
