--- a/aula-rotas/src/app/alunos/aluno-detalhe/aluno-detalhe.component.html
+++ b/aula-rotas/src/app/alunos/aluno-detalhe/aluno-detalhe.component.html
@@ -1,1 +1,9 @@
-<p>aluno-detalhe works!</p>
+<h5>
+    Detalhes do Alunos
+</h5>
+
+<p>Id: {{aluno.id}}</p>
+<p>Nome: {{aluno.nome}}</p>
+<p>Email: {{aluno.email}}</p>
+
+<a class="btn btn-primary stretched-link" (click)="editarContato()" >Editar</a>
