--- a/aula-rotas/src/app/alunos/aluno-form/aluno-form.component.html
+++ b/aula-rotas/src/app/alunos/aluno-form/aluno-form.component.html
@@ -1,1 +1,24 @@
-<p>aluno-form works!</p>
+<h5>
+    Criar/Editar Aluno
+</h5>
+
+<div class="col-md-12">
+    <div class="row">
+        <div class="form-group col-md-12">
+            <label for="disabled">#</label>
+            <input class="form-control" type="text" disabled [(ngModel)]="aluno.id" id="disabled">
+        </div>
+    </div>
+    <div class="row">
+        <div class="form-group col-md-12">
+            <label for="nome">nome</label>
+            <input class="form-control" type="text" [(ngModel)]="aluno.nome" id="nome">
+        </div>
+    </div>
+    <div class="row">
+        <div class="form-group col-md-12">
+            <label for="email">email</label>
+            <input class="form-control" type="text" [(ngModel)]="aluno.email" id="email">
+        </div>
+    </div>
+</div>
