--- a/aula-rotas/src/app/app.component.html
+++ b/aula-rotas/src/app/app.component.html
@@ -11,9 +11,9 @@
         <li class="nav-item">
           <a [routerLink]="['/cursos']" [queryParams]="{pagina:1}" routerLinkActive="active" class="nav-link">Cursos</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a [routerLink]="['curso',idCurso.value]" routerLinkActive="active" class="nav-link">Curso com id</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a [routerLink]="['/alunos']"  routerLinkActive="active" class="nav-link">Alunos</a>
         </li>
@@ -21,6 +21,6 @@
     </div>
   </nav>
   <div class="container">
-      <p>Entre com id do curso</p> <input #idCurso>
+      <!-- <p>Entre com id do curso</p> <input #idCurso> -->
       <router-outlet></router-outlet>
   </div>
