--- a/aula-rotas/src/app/app.component.html
+++ b/aula-rotas/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav *ngIf="mostrarMenu" class="navbar navbar-expand-lg navbar-light bg-light">
     <a [routerLink]="['/home']" routerLinkActive="active"  class="navbar-brand">Rotas Ng2</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
