--- a/aula-rotas/src/app/login/login.component.html
+++ b/aula-rotas/src/app/login/login.component.html
@@ -1,1 +1,19 @@
-<p>login works!</p>
+<h5>Login</h5>
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="form-group">
+                <label for="exampleInputEmail1">Usuario</label>
+                <input [(ngModel)]="usuario.nome" type="text" class="form-control" id="usuario">
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="form-group">
+                <label for="exampleInputPassword1">Senha</label>
+                <input [(ngModel)]="usuario.senha" type="password" class="form-control" id="senha">
+            </div>
+        </div>
+    </div>
+
+    <button type="submit" class="btn btn-primary col-sm-12" (click)="fazerLogin()">Login</button>
